2011-02-17  Jonathan Wakely  <jwakely.gcc@gmail.com>

PR libstdc++/47724
	* include/bits/regex_compiler.h (_Scanner::_M_advance): Do not treat
	line anchors as metacharacters.
	* testsuite/28_regex/basic_regex/ctors/47724.cc: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170236 138bc75d-0d04-0410-961f-82ee72b054a4